--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -725,6 +725,7 @@ en:
       LdapDomain:               LDAP Domain
       LdapRegion:               LDAP Region
       LdapServer:               LDAP Server
+      LoadBalancer:             Load Balancer
       ManageIQ::Providers::BaseManager:                                     Provider
       ManageIQ::Providers::AnsibleTower::ConfigurationManager:              Configuration Manager (Ansible Tower)
       ManageIQ::Providers::AnsibleTower::ConfigurationManager::ConfigurationScript: Job Template (Ansible Tower)
@@ -770,6 +771,7 @@ en:
       ManageIQ::Providers::OpenshiftEnterprise::ContainerManager:           Container Provider (OpenShift Enterprise)
       ManageIQ::Providers::Amazon::NetworkManager::CloudNetwork:            Cloud Network (Amazon)
       ManageIQ::Providers::Amazon::NetworkManager::CloudSubnet:             Cloud Subnet (Amazon)
+      ManageIQ::Providers::Amazon::NetworkManager::LoadBalancer:            Load Balancer (Amazon)
       ManageIQ::Providers::Amazon::NetworkManager::SecurityGroup:           Security Group (Amazon)
       ManageIQ::Providers::Google::NetworkManager:                          Network Provider (Google)
       ManageIQ::Providers::Google::NetworkManager::SecurityGroup:           Security Group (Google)
