--- a/locale/en.yml
+++ b/locale/en.yml
@@ -883,11 +883,11 @@ en:
       NetworkRouter:            Network Router
       OrchestrationStack:       Orchestration Stack
       OrchestrationTemplate:    Orchestration Template
-      OrchestrationTemplateCfn: CloudFormation Template
-      OrchestrationTemplateHot: Heat Template
-      OrchestrationTemplateAzure: Azure Template
-      OrchestrationTemplateVnfd: VNF Template
-      ManageIQ::Providers::Vmware::CloudManager::OrchestrationTemplate: vApp Template
+      ManageIQ::Providers::Amazon::CloudManager::OrchestrationTemplate:    CloudFormation Template
+      ManageIQ::Providers::Openstack::CloudManager::OrchestrationTemplate: Heat Template
+      ManageIQ::Providers::Azure::CloudManager::OrchestrationTemplate:     Azure Template
+      ManageIQ::Providers::Openstack::CloudManager::VnfdTemplate:          VNF Template
+      ManageIQ::Providers::Vmware::CloudManager::OrchestrationTemplate:    vApp Template
       PersistentVolume:         Persistent Volume
       PhysicalServer:           Physical Server
       ProductUpdate:            Product Update
