--- a/locale/es/manageiq.po
+++ b/locale/es/manageiq.po
@@ -17797,6 +17797,14 @@ msgstr "Recurso de middleware"
 msgid "Middleware Server"
 msgstr "Servidor de middleware"
 
+#. TRANSLATORS: en.yml key: dictionary.model.ManageIQ::Providers::Hawkular::MiddlewareManager::MiddlewareServerEap
+msgid "Middleware Server (EAP)"
+msgstr ""
+
+#. TRANSLATORS: en.yml key: dictionary.model.ManageIQ::Providers::Hawkular::MiddlewareManager::MiddlewareServerWildfly
+msgid "Middleware Server (Wildfly)"
+msgstr ""
+
 #. TRANSLATORS: en.yml key: dictionary.model.MiddlewareServerGroup
 #. TRANSLATORS: en.yml key: dictionary.table.middleware_server_group
 #. TRANSLATORS: file: db/fixtures/miq_product_features.yml
@@ -17816,6 +17824,14 @@ msgstr "Grupos de servidores de middleware"
 #. TRANSLATORS: file: product/views/MiddlewareServer.yaml
 msgid "Middleware Servers"
 msgstr "Servidores de middleware"
+
+#. TRANSLATORS: en.yml key: dictionary.model.ManageIQ::Providers::Hawkular::MiddlewareManager::MiddlewareServerEap (plural form)
+msgid "Middleware Servers (EAP)"
+msgstr ""
+
+#. TRANSLATORS: en.yml key: dictionary.model.ManageIQ::Providers::Hawkular::MiddlewareManager::MiddlewareServerWildfly (plural form)
+msgid "Middleware Servers (Wildfly)"
+msgstr ""
 
 #. TRANSLATORS: file: db/fixtures/miq_product_features.yml
 msgid "Middleware Topology"
