All Instances are cloud Instances
VmCloud is just an alias for ManageIQ::Providers::CloudManager::Vm, it's
called Instance and we don't want to introduce inconsistencies.

Revert "Rename pretty modelname- VmCloud from 'Instance to 'Cloud Instance'"

This reverts commit 41d8008246783169cf1357fc3e7a4270033a5a27.

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -926,7 +926,7 @@ en:
       User:                     EVM User
       VimPerformanceTrend:      Performance Trend
       Vm:                       VM and Instance
-      VmCloud:                  Cloud Instance
+      VmCloud:                  Instance
       VmdbIndex:                Index
       VmdbTable:                VMDB Table
       VmOrTemplate:             VM or Template
