resolved ambiguous Provider:Type field when build MiqExpression Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1514503

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -238,7 +238,7 @@ en:
       effective_cpu: CPU - Effective
       effective_memory: Memory - Effective
       ems_cluster_name: Cluster
-      emstype_description: Type
+      emstype_description: Type Description
       enabled: Active
       end_trend_value: End
       evaluation_description: What is evaluated
