Add MiqWdigetSet to Dashboard dictionary translation
https://bugzilla.redhat.com/show_bug.cgi?id=1513603

--- a/locale/en.yml
+++ b/locale/en.yml
@@ -892,6 +892,7 @@ en:
       MiqTemplate:              VM Template and Image
       MiqUserRole:              Role
       MiqWidget:                Widget
+      MiqWidgetSet:             Dashboard
       MiqWorker:                EVM Worker
       NetworkPort:              Network Port
       NetworkRouter:            Network Router
