--- a/locale/ja/manageiq.po
+++ b/locale/ja/manageiq.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: manageiq 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-10-31 12:36+0100\n"
-"PO-Revision-Date: 2017-11-21 12:17-0500\n"
-"Last-Translator: Milan Zázrivec <mzazrivec@redhat.com>\n"
+"PO-Revision-Date: 2017-12-03 09:52-0500\n"
+"Last-Translator: asasaki <asasaki@redhat.com>\n"
 "Language-Team: English\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -386,7 +386,7 @@ msgstr ""
 
 #: ../app/models/manageiq/providers/cloud_manager/provision/cloning.rb:13
 msgid "A VM with name: [%{name}] already exists"
-msgstr "仮想マシン名: [%{name}]はすでに存在します"
+msgstr "仮想マシン名: [%{name}]がすでに存在します"
 
 #: ../app/models/service_container_template.rb:106
 msgid "A project is required for the container template provisioning"
