--- a/locale/zh_CN/manageiq.po
+++ b/locale/zh_CN/manageiq.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: manageiq 1.0.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-10-31 12:36+0100\n"
-"PO-Revision-Date: 2017-11-16 12:24-0500\n"
-"Last-Translator: Joy Cai <joy.sh@linguitronics.com>\n"
+"PO-Revision-Date: 2017-12-07 11:08-0500\n"
+"Last-Translator: Tony Fu <tfu@redhat.com>\n"
 "Language-Team: Chinese (Simplified)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33589,7 +33589,7 @@ msgstr "把调度在队列中前置来现在运行"
 #. TRANSLATORS: file: product/views/MiqTask.yaml
 #: ../config/yaml_strings.rb:7606
 msgid "Queued"
-msgstr "已排队"
+msgstr "队列中"
 
 #. TRANSLATORS: file: product/views/MiqReportResult-all.yaml
 #. TRANSLATORS: file: product/views/MiqReportResult.yaml
