--- a/locale/en.yml
+++ b/locale/en.yml
@@ -735,6 +735,7 @@ en:
       GenericObject:            Generic Object
       GenericObjectDefinition:  Generic Object Class
       GuestApplication:         Guest Application
+      GuestDevice:              Guest Device
       Host:                     Host / Node
       HostPerformance:          Performance - Host
       IsoDatastore:             ISO Datastore
